--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,6 +23,16 @@ jobs:
       - name: Install intelhex
         run: pip install --upgrade intelhex
 
+      - name: ARM_Tag_FW/Newton_M3_nRF52811
+        run: |
+          cd ARM_Tag_FW/Newton_M3_nRF52811
+          pio run --environment Newton_M3_Universal
+
+      - name: ARM_Tag_FW/nrf52811_Platformio_AP
+        run: |
+          cd ARM_Tag_FW/nrf52811_Platformio_AP
+          pio run --environment nrf52811_OEPL_AP
+
 #      - name: Build Simple_AP
 #        run: |
 #          cd ESP32_AP-Flasher
@@ -52,8 +62,3 @@ jobs:
           cd ESP32_AP-Flasher
           pio run --environment OpenEPaperLink_Mini_AP_v4
           pio run --target buildfs --environment OpenEPaperLink_Mini_AP_v4
-
-      - name: ARM_TAG_FW/Newton_M3_nRF52811
-        run: |
-          cd ARM_TAG_FW/Newton_M3_nRF52811
-          pio run --environment Newton_M3_Universal
