--- a/.github/workflows/conditional-build-test.yml
+++ b/.github/workflows/conditional-build-test.yml
@@ -21,7 +21,7 @@ jobs:
               - 'ARM_Tag_FW/common/**'
             arm-tag_nrf52811-pio-ap:
               - 'ARM_Tag_FW/nrf52811_Platformio_AP/**'
-            arm-tag_88MZ100
+            arm-tag_88MZ100:
               - 'ARM_Tag_FW/88MZ100/**'
               - 'ARM_Tag_FW/common/**'
             esp32-ap:
