--- a/.github/workflows/conditional-job-test.yml
+++ b/.github/workflows/conditional-job-test.yml
@@ -21,14 +21,12 @@ jobs:
           token: ${{ github.token }}
           filters: .github/path-filters.yml
 
-  tag-build-setup:
-    uses: ./.github/workflows/setup-pio-environment.yml
-
   tag-build:
     name: Build Tag FWs
-    needs: [determine-builds, tag-build-setup]
+    needs: [determine-builds]
     runs-on: ubuntu-22.04
     steps:
+      - uses: ./.github/actions/setup-pio-environment.yml
       - name: ARM_Tag_FW/Newton_M3_nRF52811
         if: ${{ needs.determine-builds.outputs.arm-tag_newton-m3-nrf52811 == 'true' }}
         run: |
@@ -42,21 +40,19 @@ jobs:
           cd ARM_Tag_FW/nrf52811_Platformio_AP
           pio run --environment nrf52811_OEPL_AP
 
-      - name: ARM_Tag_FW/nrf52811_Platformio_AP
+      - name: ARM_Tag_FW/88MZ100_OpenEpaperLink_7.4
         if: ${{ needs.determine-builds.outputs.arm-tag_88MZ100 == 'true' }}
         run: |
           echo "POC: this shouldn't run"
           exit 1
 
-  ap-build-setup:
-    uses: ./.github/workflows/setup-pio-environment.yml
-
   ap-build:
     name: Build AP FWs
-    needs: [determine-builds, ap-build-setup]
+    needs: [determine-builds]
     if: ${{ needs.determine-builds.outputs.esp32-ap == 'true' }}
     runs-on: ubuntu-22.04
     steps:
+      - uses: ./.github/actions/setup-pio-environment.yml
       - name: Build OpenEPaperLink_Mini_AP
         run: |
           cd ESP32_AP-Flasher
