--- a/.github/actions/setup-pio/action.yml
+++ b/.github/actions/setup-pio/action.yml
@@ -1,9 +1,9 @@
-name: Setup PlatformIO Environment
+name: Setup PlatformIO
 
 inputs:
   python-version:
+    description: 'Installs PlatformIO and necessary dependencies.'
     required: false
-    type: string
     default: '3.9'
 
 runs:
