--- a/.github/workflows/conditional-job-test.yml
+++ b/.github/workflows/conditional-job-test.yml
@@ -5,7 +5,7 @@ on: [push,pull_request]
 jobs:
   determine-builds:
     name: Evaluate Required Builds
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04x
     timeout-minutes: 1
     # Map a step output to a job output
     outputs:
@@ -26,6 +26,10 @@ jobs:
     needs: [determine-builds]
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout Code (with submodules)
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
       - uses: ./.github/actions/setup-pio
       - name: ARM_Tag_FW/Newton_M3_nRF52811
         if: ${{ needs.determine-builds.outputs.arm-tag_newton-m3-nrf52811 == 'true' }}
@@ -52,7 +56,11 @@ jobs:
     if: ${{ needs.determine-builds.outputs.esp32-ap == 'true' }}
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - uses: ./.github/actions/setup-pio
+
       - name: Build OpenEPaperLink_Mini_AP
         run: |
           cd ESP32_AP-Flasher
