WIP: working Dockerfile for 88MZ100 build

--- a/ARM_Tag_FW/88MZ100_OpenEpaperLink_7.4/Dockerfile
+++ b/ARM_Tag_FW/88MZ100_OpenEpaperLink_7.4/Dockerfile
@@ -1,24 +1,22 @@
-# starting with an ancient version of Ubuntu
-FROM --platform=linux/amd64 ubuntu:14.04
+# starting with a more modern version of Ubuntu
+FROM --platform=linux/amd64 ubuntu:20.04
 
 # Update the system and install necessary packages
-RUN dpkg --add-architecture i386 && \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -y \
     curl \
-    xz-utils \
-    libc6:i386 \
-    make
+    python3-pip \
+    build-essential \
+    gcc-arm-none-eabi
 
-# Download and extract the GNU Arm Embedded Toolchain (4.9-2015-q3-update)
-RUN curl -SL https://launchpad.net/gcc-arm-embedded/4.9/4.9-2015-q3-update/+download/gcc-arm-none-eabi-4_9-2015q3-20150921-linux.tar.bz2 | tar -xjC /
+# Install the necessary python packages (pillow for image processing)
+RUN pip3 install --upgrade pillow
 
-# Add the toolchain binaries to the PATH
-ENV PATH="/gcc-arm-none-eabi-4_9-2015q3/bin:${PATH}"
-ENV ARMGCC_PATH="/gcc-arm-none-eabi-4_9-2015q3/bin/"
+RUN curl -SL https://github.com/nlohmann/json/releases/download/v3.11.3/json.hpp --create-dirs -o /usr/include/nlohmann/json.hpp
 
 # Copy the builds deps of the workspace
 COPY . /root/workspace/OpenEPaperLink
+RUN chmod +x /root/workspace/OpenEPaperLink/ARM_Tag_FW/88MZ100_OpenEpaperLink_7.4/mkfsOEPL/compile_fs_tools.sh
 
 # Set the working directory
 WORKDIR /root/workspace/OpenEPaperLink
