--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,11 +1,16 @@
 name: Containers
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
-      - containerized-pipeline
-  workflow_dispatch:
+      - 'master'
+      - 'containerized-pipeline'
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
   publish:
@@ -13,11 +18,17 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/openepaperlink
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -28,5 +39,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: ghcr.io/${{ github.repository }}/openepaperlink:latest
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
