--- a/.github/workflows/conditional-build-test.yml
+++ b/.github/workflows/conditional-build-test.yml
@@ -27,6 +27,12 @@ jobs:
     name: Build Tag FW
     needs: [determine-builds]
     runs-on: ubuntu-22.04
+    container:
+      # TODO: this probably shouldn't have a hard-coded reference to latest
+      image: ghcr.io/${{ github.repository_owner }}/openepaperlink:latest
+      # volumes:
+      #   # TODO: is there a standard practice to follow for the mount point?
+      #   - ${{ github.workspace }}:/github/workspace
     steps:
       - name: Checkout Code (with submodules)
         uses: actions/checkout@v4
